[gd_scene load_steps=4 format=2]

[ext_resource path="res://split_screen.gd" type="Script" id=1]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://world.tscn" type="PackedScene" id=3]

[node name="split_screen" type="Node"]
script = ExtResource( 1 )

[node name="viewport_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vieport_1" type="ViewportContainer" parent="viewport_container"]
margin_right = 355.0
margin_bottom = 480.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="viewport_container/vieport_1"]
size = Vector2( 355, 480 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="viewport_container/vieport_1/Viewport"]
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="myWorld" parent="viewport_container/vieport_1/Viewport" instance=ExtResource( 3 )]

[node name="vieport_2" type="ViewportContainer" parent="viewport_container"]
margin_left = 365.0
margin_right = 720.0
margin_bottom = 480.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="viewport_container/vieport_2"]
size = Vector2( 355, 480 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="viewport_container/vieport_2/Viewport"]
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="CanvasLayer" parent="." instance=ExtResource( 2 )]
